Closed Bug 152700 Opened 22 years ago Closed 22 years ago

compiler warnings caused by 119380 checkin

Categories

(Directory :: LDAP XPCOM SDK, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dmosedale, Assigned: dmosedale)

References

Details

Attachments

(1 file)

ayn2 wrote: > This checking have added two "might be used uninitialized" warnings: > > +directory/xpcom/base/src/nsLDAPBERValue.cpp:59 > + `PRUint8 * array' might be used uninitialized in this function > + > +directory/xpcom/base/src/nsLDAPMessage.cpp:600 > + `nsresult rv' might be used uninitialized in this function It turns out that the first warning even uncovered a bug, though a completely trivial one. I've switched to gcc 3.1 so I'll start seeing these warnings also. Patch forthcoming.
Attached patch patch, v1Splinter Review
Bug 59652 tracks "may be used uninitialized" warnings. BTW, brad TBox shows all these warnings.
Blocks: 59652
Attachment #88215 - Flags: review+
Status: NEW → ASSIGNED
Attachment #88215 - Flags: superreview?(bryner)
Attachment #88215 - Flags: superreview?(bryner) → superreview+
*** Bug 188124 has been marked as a duplicate of this bug. ***
Depends on: 191717
The first warning was fixed in bug 191717, the second is still there: directory/xpcom/base/src/nsLDAPMessage.cpp:588 `nsresult rv' might be used uninitialized in this function
timeless checked in the patch.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: