Bug 152700 compiler warnings caused by 119380 checkin patch by dmose r=timeless sr=bryner